--- a/README
+++ b/README
@@ -1,5 +1,5 @@
-https://imgur.com/a/wW32G5s
 
+![Test Image 1](https://imgur.com/a/wW32G5s)
 This is a quickly made POC (Proof of conept) software to manage one week for workers and their tasks.
 Features : 
 - Update System
